# holo

./: CMakeLists.txt  LICENSE  README.md  README.md~  TODO  main.cpp  main.hpp  run.sh
assets/: .directory
include/: consts.hpp  fft.hpp  filters.hpp  gerch.hpp  optimize.hpp
src/: fft.cpp  filters.cpp  gerch.cpp  global.cpp  holorunner.cpp  optimize.cpp  optimze.cpp  reference.cpp
test/: fft_test.cpp  filters_test.cpp  gerch_test.cpp  holorunner_test.cpp  optimize_test.cpp  reference_test.cpp  test_main.cpp
