cmake_minimum_required(VERSION 2.6)
project(holobo)
set(Boost_USE_STATIC_LIBS OFF) 
set(Boost_USE_MULTITHREADED ON)  
set(Boost_USE_STATIC_RUNTIME OFF) 
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
find_package(Boost 1.55.0 REQUIRED COMPONENTS system thread iostreams program_options)
find_package(OpenCV 2.4.10 REQUIRED)
find_package(GSL REQUIRED)
set(INC_OWN "./include")
ADD_DEFINITIONS(-std=c++11 -I./include -g -o -s -O3 -Wreturn-type -D__extern_always_inline=inline) 
if(Boost_FOUND)
    include_directories(${INCLUDE_DIRS})
    include_directories(${Boost_INCLUDE_DIRS})
    include_directories(${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
    add_executable(holobo main.cpp src/reference.cpp src/fft.cpp src/filters.cpp src/gerch.cpp)
    add_executable(holorunner src/holorunner.cpp src/reference.cpp src/fft.cpp src/filters.cpp)
    target_link_libraries(holobo ${Boost_LIBRARIES} ${OpenCV_LIBS} ${GSL_INCLUDE_DIRS} ${GSLCBLAS_INCLUDE_DIRS})
    target_link_libraries(holorunner ${Boost_LIBRARIES} ${OpenCV_LIBS})
endif() 
